--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,7 +14,7 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Setup Python
-        uses: actions/setup-python@v4
+        uses: actions/setup-python@v5
         with:
           python-version: '3.10'  # ou autre version compatible
 
@@ -22,13 +22,16 @@ jobs:
         run: |
           pip install mkdocs mkdocs-material
 
-      - name: Build Site
+      - name: Build and deploy
         run: |
-          mkdocs build
-          touch site/.nojekyll
+          mkdocs gh-deploy --force
+      # - name: Build Site
+      #   run: |
+      #     mkdocs build
+      #     touch site/.nojekyll
 
-      - name: Deploy to GitHub Pages
-        uses: peaceiris/actions-gh-pages@v3
-        with:
-          github_token: ${{ secrets.TOKEN_DEPLOY }}
-          publish_dir: ./site
+      # - name: Deploy to GitHub Pages
+      #   uses: peaceiris/actions-gh-pages@v3
+      #   with:
+      #     github_token: ${{ secrets.TOKEN_DEPLOY }}
+      #     publish_dir: ./site
