--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,30 +1,30 @@
-name: Deploy MkDocs
+# name: Deploy MkDocs
 
-on:
-  push:
-    branches:
-      - main  # Change selon la branche utilisée
+# on:
+#   push:
+#     branches:
+#       - main  # Change selon la branche utilisée
 
-jobs:
-  deploy:
-    runs-on: ubuntu-latest
+# jobs:
+#   deploy:
+#     runs-on: ubuntu-latest
 
-    steps:
-      - name: Checkout Repository
-        uses: actions/checkout@v3
+#     steps:
+#       - name: Checkout Repository
+#         uses: actions/checkout@v3
 
-      - name: Setup Python
-        uses: actions/setup-python@v5
-        with:
-          python-version: '3.10'  # ou autre version compatible
+#       - name: Setup Python
+#         uses: actions/setup-python@v5
+#         with:
+#           python-version: '3.10'  # ou autre version compatible
 
-      - name: Install MkDocs & Theme
-        run: |
-          pip install mkdocs mkdocs-material
+#       - name: Install MkDocs & Theme
+#         run: |
+#           pip install mkdocs mkdocs-material
 
-      - name: Build and deploy
-        run: |
-          mkdocs gh-deploy --force
+#       - name: Build and deploy
+#         run: |
+#           mkdocs gh-deploy --force
       # - name: Build Site
       #   run: |
       #     mkdocs build
